--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css?family=Orbitron|Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Rye&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Calculator</title>
   </head>
